Instrument callbak x86 implemeted

--- a/NativeAgent/NativeAgent.vcxproj
+++ b/NativeAgent/NativeAgent.vcxproj
@@ -161,6 +161,7 @@
   <ItemGroup>
     <ClInclude Include="Common.h" />
     <ClInclude Include="RegularInjection.h" />
+    <ClInclude Include="UndocumentedData.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
