--- a/NativeAgent/NativeAgent.vcxproj.filters
+++ b/NativeAgent/NativeAgent.vcxproj.filters
@@ -29,5 +29,8 @@
     <ClInclude Include="Common.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="UndocumentedData.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
