--- a/NativeAgent/NativeAgent.vcxproj.filters
+++ b/NativeAgent/NativeAgent.vcxproj.filters
@@ -21,6 +21,9 @@
     <ClCompile Include="RegularInjection.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="SetWindowHookInjection.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="RegularInjection.h">
@@ -30,6 +33,9 @@
       <Filter>头文件</Filter>
     </ClInclude>
     <ClInclude Include="UndocumentedData.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="SetWindowHookInjection.h">
       <Filter>头文件</Filter>
     </ClInclude>
   </ItemGroup>
